// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tokenizer stemmer analyzer should merge tokens that stem to the same root form 1`] = `
[
  {
    "count": 1,
    "isOriginal": true,
    "positions": [
      0,
    ],
    "term": "running",
  },
  {
    "count": 3,
    "isOriginal": false,
    "positions": [
      0,
      1,
      2,
    ],
    "term": "run",
  },
  {
    "count": 1,
    "isOriginal": true,
    "positions": [
      1,
    ],
    "term": "runs",
  },
]
`;

exports[`Tokenizer stemmer analyzer should reduce words to their root form using Porter stemming algorithm 1`] = `
[
  {
    "count": 2,
    "isOriginal": true,
    "positions": [
      0,
      4,
    ],
    "term": "running",
  },
  {
    "count": 2,
    "isOriginal": false,
    "positions": [
      0,
      4,
    ],
    "term": "run",
  },
  {
    "count": 1,
    "isOriginal": true,
    "positions": [
      1,
    ],
    "term": "quickly",
  },
  {
    "count": 1,
    "isOriginal": false,
    "positions": [
      1,
    ],
    "term": "quickli",
  },
  {
    "count": 1,
    "isOriginal": true,
    "positions": [
      2,
    ],
    "term": "better",
  },
  {
    "count": 1,
    "isOriginal": true,
    "positions": [
      3,
    ],
    "term": "fastest",
  },
]
`;

exports[`Tokenizer tokenize should return terms with correct positions 1`] = `
[
  {
    "count": 1,
    "positions": [
      0,
    ],
    "term": "My",
  },
  {
    "count": 1,
    "positions": [
      1,
    ],
    "term": "cat",
  },
  {
    "count": 1,
    "positions": [
      2,
    ],
    "term": "table",
  },
]
`;

exports[`Tokenizer wordDelimiter analyzer should split words by dashes and underscores while preserving original tokens 1`] = `
[
  {
    "count": 1,
    "positions": [
      0,
    ],
    "term": "user-defined_command",
  },
  {
    "count": 1,
    "positions": [
      1,
    ],
    "term": "definition",
  },
  {
    "count": 1,
    "positions": [
      0,
    ],
    "term": "user",
  },
  {
    "count": 1,
    "positions": [
      0,
    ],
    "term": "defined",
  },
  {
    "count": 1,
    "positions": [
      0,
    ],
    "term": "command",
  },
]
`;
